# ScreenCapture

./: BUILD_GUIDE.md
App/: Lang.cpp  Lang.h
screencapture-rust/: .gitignore  Cargo.toml  README.md  package-lock.json
screencapture-rust/src/: canvas.rs  capture.rs  clipboard.rs  main.rs  shapes.rs  toolbar.rs
